<?xml version="1.0"?>
<package format="2">
  <name>mpcc_ros</name>
  <version>0.1.0</version>
  <description>The mpcc_ros package</description>
  <maintainer email="wpgnssla34@kaist.ac.kr">Kang Jehun</maintainer>
  <license>Apache License, Version 2.0</license>
  <author email="wpgnssla34@kaist.ac.kr">Kang Jehun</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>carla_ros_bridge</build_depend>
  <build_depend>ad_challenge_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>ackermann_msgs</build_depend>

  <build_export_depend>carla_ros_bridge</build_export_depend>
  <build_export_depend>ad_challenge_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>ackermann_msgs</build_export_depend>
  
  <exec_depend>carla_ros_bridge</exec_depend>
  <exec_depend>ad_challenge_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>

  <export>
  </export>
</package>
